[package]
edition = "2021"
name = "noisy-shuttle"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.3"
snow = "0.9"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
tokio = { version = "1.20", features = ["full"] }
tokio-rustls = "0.23"
lazy_static = "1.4"
anyhow = "1.0"
structopt = "0.3"
clap = "3.2.18"
futures = "0.3"
rand = "0.8.5"
blake2 = "0.10.4"

[patch.crates-io]
rustls = { git = "https://github.com/gowee/rustls-mod.git" }
