[package]
name = "h2mux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
h2 = "0.3"
http = "0.2.9"
tokio = { version = "1.29", features = ["time"] }
thiserror = "1.0"
tracing = "0.1.37"
