[package]
name = "tokio-h2mux"
version = "0.0.1"
edition = "2021"
description = "Stream multiplexing via HTTP/2 (like yamux)"
homepage = "https://github.com/Gowee/noisy-shuttle/tree/main/h2mux"
license = "MIT"
keywords = [ "http2", "networking" ]
categories = [ "network-programming" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
h2 = "0.3.21"
http = "0.2.9"
tokio = { version = "1.29", features = ["time"] }
thiserror = "1.0"
tracing = "0.1.37"
