[package]
name = "noisy-shuttle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.21"
futures = "0.3"
anyhow = "1.0"
structopt = "0.3"
clap = "3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
lru = "0.7"
snowy-tunnel = { path = "../tunnel" }
deadqueue = { version = "0.2", features = ["resizable"] }
ja3-rustls = { version = "0.0", git = "https://github.com/gowee/ja3-rustls.git" }
async-trait = "0.1.57"
rand = "0.8"
num-traits = "0.2"
num-derive = "0.3"
socks5-protocol = { version = "0.3", features = ["sync"] }
httparse = "1.8"
