[package]
name = "noisy-shuttle"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.21"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
anyhow = "1.0"
structopt = "0.3"
structopt-flags = "0.3.6"
clap = { version = "3.2" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
lru = "0.7"
deadqueue = { version = "0.2", features = ["resizable"] }
ja3-rustls = { version = "0.0", git = "https://github.com/gowee/ja3-rustls.git" }
async-trait = "0.1.57"
rand = "0.8"
num-traits = "0.2"
num-derive = "0.3"
socks5-protocol = { version = "0.3", features = ["sync"] }
httparse = "1.8"
yamux = "0.10"
priority-queue = "1.2"
derive_more = { version= "0.99.17", features = ["deref", "deref_mut"] }


snowy-tunnel = { path = "../tunnel" }
async-once-cell = "0.4.2"
futures-util = "0.3.24"
