[package]
edition = "2021"
name = "snowy-tunnel"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.3"
snow = "0.9"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
tokio = { version = "1.20", features = ["full"] }
lazy_static = "1.4"
futures = "0.3"
rand = "0.8"
blake2 = "0.10"
tracing = "0.1"
lru = "0.7"
ja3-rustls = { version = "0.0", git = "https://github.com/gowee/ja3-rustls.git", features = ["rand"] }
